# anim

./: .gitignore  README.md
.github/workflows/: build_and_push.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  sieve_animation.py
backend/app/: clerk.py  config.py  main.py  schemas.py
backend/app/chat/: route.py  task_processing.py
backend/app/chat/llm/: __init__.py  constants.py  parser.py  prompts.py
backend/app/database/: core.py  models.py
backend/app/database/revisions/: env.py
backend/app/database/revisions/versions/: ca6635cd191a_first_migration.py  cba856c068a9_add_video_table.py  e72432c6fab0_add_credits_table.py  fe17d2761280_rename_chat_history_table.py
backend/app/llm/: __init__.py  parser.py  prompts.py
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: archive.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(home)/: layout.tsx  page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/: Chat.tsx  Navbar.tsx  PromptBox.tsx
frontend/src/components/home/: about.tsx  cta-button.tsx  footer.tsx  how-to.tsx  me.tsx  pricing.tsx
frontend/src/components/ui/: ShinyText.css  animation-container.tsx  button.tsx  input.tsx  logo.tsx  magic-card.tsx  spinner.tsx  (+2 more)
frontend/src/hooks/: useApi.ts  useChat.ts  useWebSocket.ts
frontend/src/lib/: api.ts  query-provider.tsx  types.ts  utils.ts
frontend/src/store/: useChatStore.ts  useHistoryStore.ts  usePromptStore.ts
(+15 files in other folders)
