[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "manim>=0.19.0",
    "numpy>=2.3.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[mypy]>=2.0.41",
]
